--- a/manifest.json.in
+++ b/manifest.json.in
@@ -9,7 +9,7 @@
             "desktop":  "ubitcoin.desktop"
         }
     },
-    "version": "0.1",
-    "maintainer": "Deyan Dimitrov <dikelito@tutamail.com>",
+    "version": "0.2",
+    "maintainer": "ixerious <dikelito@tutamail.com>",
     "framework" : "ubuntu-sdk-16.04"
 }
